@@ -1,3 +1,6 @@
+X   X
+    * Use UUID in HashMap instead of Player, fix potential memory leak/future incompatibility
+
 2012-04-21  2.0
     * Add dispensing TNT, liquid, boat, minecart
     * Add conduits
